--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -213,6 +213,9 @@
             <h2>{% if pending == 'pending' %}Pending Reports{% elif pending == 'complete' %}Completed
                 Reports{% endif %}</h2>
 
+                <strong>Ordered by:</strong> {{ orderby }}<br>
+    <strong>Filters:</strong> Tiger certainty - {{ tiger_certainty }}, Site certainty - {{ site_certainty }}, Status - {{ status }}
+
         {% endblock %}
 
 
@@ -275,6 +278,23 @@
                 {% if pending == 'pending' or checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
                     `
                     {% form form using "floppyforms/layouts/bootstrap.html" %}
+
+                {% if checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
+
+        <div class="btn-group" id="status_grp" data-toggle="buttons">
+            <label class="btn btn-default btn-lg" data-toggle="tooltip" data-placement="bottom"
+                   title="Confirm expert annotations without changes" id="confirm_btn_{{ form.instance.id }}">
+                <input type="radio" name="confirm_revise_group_{{ form.instance.id }}" autocomplete="off">Confirm <span class="glyphicon glyphicon-thumbs-up"></span></label>
+            <label class="btn btn-default btn-lg" data-toggle="tooltip" data-placement="bottom"
+                   title="Replace expert annotation with your own" id="revise_btn_{{ form.instance.id }}">
+                <input type="radio" name="confirm_revise_group_{{ form.instance.id }}" autocomplete="off">Revise <span
+                    class="glyphicon glyphicon-thumbs-down"></span>
+            </label>
+        </div>
+
+                {% endif %}
+
+
                 {% else %}
 
                     {% if form.instance.report.type == 'adult' %}
@@ -325,14 +345,14 @@
                         Reset
                     </button><br>
 
-                    <div style="overflow: auto;height: 814px;">
+                    <div style="overflow: auto;">
 
                         {{ form.instance.report.photo_html_for_report_validation | safe }}
 
                     </div>
                 {% else %}
 
-                    <div style="overflow: auto;height: 814px;">
+                    <div style="overflow: auto;">
 
                         {{ form.instance.report.get_photo_html_for_report_validation_completed | safe }}
 
@@ -356,15 +376,16 @@
                 <br>
                 <strong>User Responses</strong><br>
 
-                <div style="overflow: auto;height: 150px;border:1px solid #333333;padding:2px;">
+                <div style="overflow: auto;height: 120px;border:1px solid #333333;padding:2px;">
                     {{ form.instance.report.response_html  | safe }}
                 </div>
                 <br>
                 <strong>User Notes</strong><br>
 
-                <div style="overflow: auto;height: 270px;border:1px solid #333333;padding:2px;">
+                <div style="overflow: auto;height: 100px;border:1px solid #333333;padding:2px;">
                     {{ form.instance.report.note }}
                 </div>
+
 
             </div>
 
@@ -421,11 +442,40 @@
 
 
                 var validation_complete_id = "{{ form.validation_complete.auto_id }}";
-                $("#" + validation_complete_id).css({"height":"100px","width" :"100%"})
+                $("#" + validation_complete_id).css({"height":"80px","width" :"80%"})
 
             {% endif %}
 
+                    {% if checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
 
+                        var revise_id = "{{ form.revise.auto_id }}";
+
+                        {% if form.instance.revised %}
+$("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + validation_complete_id).parent().parent().show();
+
+                            {% else %}
+$("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + validation_complete_id).parent().parent().hide();
+                            {% endif %}
+                var this_id = "{{ form.instance.id }}";
+
+                $("#revise_btn_" + this_id).click(function(){
+                        $("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}").parent().parent().slideDown('slow');
+
+                    $("#" + revise_id).prop('checked', true);
+                });
+
+                $("#confirm_btn_" + this_id).click(function(){
+                        $("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}").parent().parent().slideUp('slow');
+                                        $("#" + revise_id).prop('checked', false);
+
+                 });
+
+
+
+
+
+
+            {% endif %}
         </script>
 
 
