--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -441,9 +441,11 @@
                 });
 
 
+
             {% endif %}
 
                     {% if checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
+                        var validation_complete_id = "{{ form.validation_complete.auto_id }}";
 
                         var revise_id = "{{ form.revise.auto_id }}";
 
