--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -75,7 +75,9 @@
         {% for form in formset %}
             function map_init_basic{{ form.instance.id }}(map, options) {
 
-                L.marker([{{ form.instance.report.lat }}, {{ form.instance.report.lon }}], {icon: {% if form.instance.report.type == 'site' %}site_icon{% else %}mosquito_icon{% endif %}}).bindPopup('<p><strong>Lat:</strong> {{ form.instance.report.lat }}</p><p><strong>Lon:</strong> {{ form.instance.report.lon }}</p>').addTo(map);
+                L.marker([{{ form.instance.report.lat }}, {{ form.instance.report.lon }}], {icon:
+                        {% if form.instance.report.type == 'site' %}site_icon{% else %}
+                            mosquito_icon{% endif %}}).bindPopup('<p><strong>Lat:</strong> {{ form.instance.report.lat }}</p><p><strong>Lon:</strong> {{ form.instance.report.lon }}</p>').addTo(map);
 
             }
         {%  endfor %}
@@ -219,8 +221,9 @@
             <h2>{% if pending == 'pending' %}Pending Reports{% elif pending == 'complete' %}Completed
                 Reports{% endif %}</h2>
 
-                <strong>Ordered by:</strong> {{ orderby }}<br>
-    <strong>Filters:</strong> Tiger certainty - {{ tiger_certainty }}, Site certainty - {{ site_certainty }}, Status - {{ status }}
+            <strong>Ordered by:</strong> {{ orderby }}<br>
+            <strong>Filters:</strong> Tiger certainty - {{ tiger_certainty }}, Site certainty - {{ site_certainty }},
+            Status - {{ status }}
 
         {% endblock %}
 
@@ -265,11 +268,11 @@
             </div>
         </div>
         {% block report_title_status_row %}
-        <div class="row">
-            <div class="col-md-12">
-                <strong>Who has this report? </strong> {{ form.instance.report.get_who_has_bootstrap | safe }}
+            <div class="row">
+                <div class="col-md-12">
+                    <strong>Who has this report? </strong> {{ form.instance.report.get_who_has_bootstrap | safe }}
+                </div>
             </div>
-        </div>
         {% endblock %}
 
         <div class="row">
@@ -285,20 +288,25 @@
                     `
                     {% form form using "floppyforms/layouts/bootstrap.html" %}
 
-                {% if checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
+                    {% if checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
 
-        <div class="btn-group" id="status_grp" data-toggle="buttons">
-            <label class="btn btn-default btn-lg" data-toggle="tooltip" data-placement="bottom"
-                   title="Confirm expert annotations without changes" id="confirm_btn_{{ form.instance.id }}">
-                <input type="radio" name="confirm_revise_group_{{ form.instance.id }}" autocomplete="off">Confirm <span class="glyphicon glyphicon-thumbs-up"></span></label>
-            <label class="btn btn-default btn-lg" data-toggle="tooltip" data-placement="bottom"
-                   title="Replace expert annotation with your own" id="revise_btn_{{ form.instance.id }}">
-                <input type="radio" name="confirm_revise_group_{{ form.instance.id }}" autocomplete="off">Revise <span
-                    class="glyphicon glyphicon-thumbs-down"></span>
-            </label>
-        </div>
+                        <div class="btn-group" id="status_grp" data-toggle="buttons">
+                            <label class="btn btn-default btn-lg" data-toggle="tooltip" data-placement="bottom"
+                                   title="Confirm expert annotations without changes"
+                                   id="confirm_btn_{{ form.instance.id }}">
+                                <input type="radio" name="confirm_revise_group_{{ form.instance.id }}"
+                                       autocomplete="off">Confirm <span
+                                    class="glyphicon glyphicon-thumbs-up"></span></label>
+                            <label class="btn btn-default btn-lg" data-toggle="tooltip" data-placement="bottom"
+                                   title="Replace expert annotation with your own"
+                                   id="revise_btn_{{ form.instance.id }}">
+                                <input type="radio" name="confirm_revise_group_{{ form.instance.id }}"
+                                       autocomplete="off">Revise <span
+                                    class="glyphicon glyphicon-thumbs-down"></span>
+                            </label>
+                        </div>
 
-                {% endif %}
+                    {% endif %}
 
 
                 {% else %}
@@ -450,35 +458,32 @@
 
             {% endif %}
 
-                    {% if checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
-                        var validation_complete_id = "{{ form.validation_complete.auto_id }}";
+            {% if checked == 'unchecked' or checked == 'confirmed' or checked == 'revised' %}
 
-                        var revise_id = "{{ form.revise.auto_id }}";
+                var validation_complete_id = "{{ form.validation_complete.auto_id }}";
 
-                        {% if form.instance.revised %}
-$("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + validation_complete_id).parent().parent().show();
+                var revise_id = "{{ form.revise.auto_id }}";
 
-                            {% else %}
-$("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + validation_complete_id).parent().parent().hide();
-                            {% endif %}
+                var hidden_form_fields{{ form.instance.id }} = $("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + validation_complete_id);
+
+                {% if form.instance.revised %}
+                    hidden_form_fields{{ form.instance.id }}.parent().parent().show();
+
+                {% else %}
+                    hidden_form_fields{{ form.instance.id }}.parent().parent().hide();
+                {% endif %}
                 var this_id = "{{ form.instance.id }}";
 
-                $("#revise_btn_" + this_id).click(function(){
-                        $("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}").parent().parent().slideDown('slow');
-
+                $("#revise_btn_" + this_id).click(function () {
+                    hidden_form_fields{{ form.instance.id }}.parent().parent().slideDown('slow');
                     $("#" + revise_id).prop('checked', true);
                 });
 
-                $("#confirm_btn_" + this_id).click(function(){
-                        $("#" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }},#" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}").parent().parent().slideUp('slow');
-                                        $("#" + revise_id).prop('checked', false);
+                $("#confirm_btn_" + this_id).click(function () {
+                    hidden_form_fields{{ form.instance.id }}.parent().parent().slideUp('slow');
+                    $("#" + revise_id).prop('checked', false);
 
-                 });
-
-
-
-
-
+                });
 
             {% endif %}
         </script>
