--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -134,6 +134,11 @@
                 </thead>
                 <tbody>
                     {% for ano in form.instance.report.expert_report_annotations.all %}
+                        {% if ano.validaton_complete %}
+                            {% if ano.is_superexpert and ano.revise %}
+
+
+                             {% else %}
                 <tr>
                     <td><a role="button" data-toggle="collapse"
                            href="#expert_collapse{{ ano.report.version_UUID }}{{ ano.id }}" aria-expanded="false"
@@ -162,6 +167,9 @@
                     </td>
                 </tr>
 
+                                {% endif %}
+
+                        {% endif %}
     {% endfor %}
 
                 </tbody>
