--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block no_records_message %}
-    {% if n_unchecked == 0 %}
+    {% if n_unchecked == 0 and n_confirmed == 0 and n_revised == 0 %}
         There are not yet any reports that have been validated by 3 experts. Please refresh this page later, once more
         expert validations have been completed.
     {% else %}
